# hsrparse

./: .gitignore  README.md  env.json  main.py  pyproject.toml
cmd/: 3rd_anniv.py  char_list.txt  dump_char_list.py  sync_voice.py
func/: voice.py
src/: config.py  fmt.py  models.py  textmap.py
templates/: voice_entry.j2  voice_entry_2x.j2
